package desafios.ruan.segundo_pjt;

public interface NavegadorInternet {
    public void exibirPagina(String url);

    public void adicionarNovaAba();

    public void atualizarPagina();
}
