package desafios.ruan.segundo_pjt;

public interface ReprodutorMusical {
    public void tocar();

    public void pausar();

    public void selecionarMusica(String musica);
}
