@startuml
'https://plantuml.com/class-diagram

class MeuIphone {
    + meuIphone : Iphone
}

class Iphone {
    + tocar() : void
    + pausar() : void
    + selecionarMusica(String musica) : void
    + ligar(String numero) : void
    + atender() : void
    + iniciarCorreioVoz() : void
    + exibirPagina(String url) : void
    + adicionarNovaAba() : void
    + atualizarPagina() : void
}

interface ReprodutorMusical {
    + tocar() : void
    + pausar() : void
    + selecionarMusica(String musica) : void
}

interface AparelhoTelefonico {
    + ligar(String numero) : void
    + atender() : void
    + iniciarCorreioVoz() : void
}

interface NavegadorInternet {
    + exibirPagina(String url) : void
    + adicionarNovaAba() : void
    + atualizarPagina() : void
}

MeuIphone *-right- Iphone
Iphone -up-|> ReprodutorMusical
Iphone -up-|> AparelhoTelefonico
Iphone -up-|> NavegadorInternet

@enduml